--- a/app/src/main/res/drawable/button_neutral.xml
+++ b/app/src/main/res/drawable/button_neutral.xml
@@ -2,6 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/light_blue"/>
+    <solid android:color="@color/logo_background"/>
     <corners android:radius="20dp"/>
 </shape>
