--- a/app/src/main/res/drawable/side_popup_background.xml
+++ b/app/src/main/res/drawable/side_popup_background.xml
@@ -4,9 +4,10 @@
 
 
     <corners
-        android:radius="15dp"/>
-    <stroke
-        android:width="10dp"
+        android:bottomLeftRadius="15dp"
+        android:topLeftRadius="15dp"/>
+
+    <solid
         android:color="@color/primaryDark"/>
 
 </shape>
