--- a/app/src/main/res/layout/activity_all_tools_view.xml
+++ b/app/src/main/res/layout/activity_all_tools_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,14 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/primaryDark"
+        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/toolbar"/>
-
-    <androidx.core.widget.NestedScrollView
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:id="@+id/nestedScrollView">
-
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        android:id="@+id/coordinator">
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -26,9 +26,17 @@
             android:layout_marginEnd="10dp"
             android:id="@+id/recyclerView"/>
 
-    </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+<!--
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
+        android:id="@+id/nestedScrollView">
 
 
+
+    </androidx.core.widget.NestedScrollView>-->
 
     <ImageView
         android:layout_width="100dp"
@@ -36,6 +44,10 @@
         android:src="@drawable/empty_icon"
         android:layout_centerInParent="true"
         android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/empty_icon"/>
 
     <ProgressBar
@@ -45,6 +57,10 @@
         android:indeterminate="true"
         android:layout_centerInParent="true"
         android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:indeterminateTint="@color/Red_color"
         />
 
@@ -59,8 +75,9 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="20dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/continueButton"/>
 
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
