--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,14 +33,14 @@
                     <ImageView
                         android:layout_width="35dp"
                         android:layout_height="35dp"
-                        android:src="@drawable/new_pdf_icon"
+                        android:src="@drawable/app_full_logo"
                         android:layout_marginStart="20dp"
                         android:id="@+id/app_logo"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="PDFViewer"
-                        android:textColor="@color/text_color"
+                        android:textColor="@color/Red_color"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:fontFamily="@font/josefont"
@@ -55,6 +55,17 @@
                         android:fontFamily="@font/josefont"
                         android:id="@+id/text_select"
                         android:visibility="gone"/>
+                    <Switch
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:rotation="90"
+                        android:thumb="@drawable/theme_switch"
+                        android:id="@+id/theme_switch"
+                        android:layout_centerInParent="true"
+                        android:trackTint="@color/blue"
+                        tools:ignore="UseSwitchCompatOrMaterialXml" />
+
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.AppBarLayout>
 
@@ -79,7 +90,7 @@
                         android:layout_marginTop="10dp"
                         android:padding="15dp"
                         android:elevation="5dp"
-                        android:background="@drawable/small_background2"
+                        android:background="@drawable/small_background"
                         android:layout_marginEnd="27dp"
                         android:id="@+id/floating_window"
                         android:visibility="visible"
@@ -98,12 +109,12 @@
                                 android:fontFamily="@font/josefont"
                                 android:id="@+id/welcome_text"/>
                             <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
                                 android:src="@drawable/ic_baseline_close_24"
                                 android:layout_alignParentEnd="true"
                                 android:id="@+id/close_btn"
-                                app:tint="@color/image_color" />
+                                app:tint="@color/accent" />
                         </RelativeLayout>
                         <!--<TextView
                             android:layout_width="wrap_content"
@@ -122,23 +133,23 @@
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="end"
+                            android:layout_gravity="center"
                             android:layout_marginTop="20dp"
                             android:padding="5dp"
                             android:layout_marginEnd="5dp"
                             android:layout_marginBottom="10dp"
                             app:cardCornerRadius="5dp"
                             app:cardBackgroundColor="@color/primaryDark"
-                            app:cardElevation="10dp"
+                            app:cardElevation="2dp"
                             android:id="@+id/sign_button">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:padding="5dp"
-                                android:textColor="@color/text_color"
+                                android:textColor="@color/accent"
                                 android:fontFamily="@font/josefont"
-                                android:text="Welcome to our PDF reader and tools,\n enjoy the features!"
+                                android:text="@string/welcome_notes"
                                 android:textAlignment="center"
                                 android:textStyle="italic"
                                 android:id="@+id/ads_text"/>
@@ -178,7 +189,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/recent_files"
-                                android:textColor="@color/text_color"
+                                android:textColor="@color/blue"
                                 android:layout_marginStart="25dp"
                                 android:textStyle="bold"
                                 android:textSize="18sp"
@@ -200,7 +211,7 @@
                                     android:textSize="16sp"
                                     android:gravity="center_vertical"
                                     android:textStyle="bold"
-                                    android:textColor="@color/blue"
+                                    android:textColor="@color/accent"
                                     android:fontFamily="@font/josefont"
                                     android:layout_gravity="center_vertical"
                                     android:id="@+id/clear_button"/>
@@ -232,6 +243,8 @@
                         android:textAlignment="center"
                         android:textStyle="bold"
                         android:textSize="15sp"
+                        android:padding="10dp"
+                        android:background="@drawable/button_background3"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="40dp"
                         android:layout_marginStart="40dp"
@@ -244,48 +257,14 @@
                         android:layout_marginBottom="55dp"
                         android:layout_width="match_parent"
                         android:layout_marginStart="17dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginTop="10dp"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
             </androidx.core.widget.NestedScrollView>
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-
-
-        <ImageView
-            android:id="@+id/new_file"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginEnd="35dp"
-            android:layout_marginBottom="75dp"
-            android:background="@drawable/rounded_background"
-            android:elevation="10dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_baseline_playlist_add_24"
-            app:tint="@color/white" />
-
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentBottom="true"
-            android:background="@color/primaryDark"
-            app:itemIconTint="@drawable/selector"
-            app:itemPaddingBottom="5dp"
-            app:itemTextColor="@drawable/selector"
-            app:itemIconSize="32dp"
-            app:itemTextAppearanceActive="@style/navDrawerTextStyleActive"
-            app:itemTextAppearanceInactive="@style/navDrawerTextStyleDeActive"
-            app:labelVisibilityMode="labeled"
-            app:menu="@menu/bottom_navigation_view"
-            android:id="@+id/bottom_navigation"/>
 
         <LinearLayout
             android:id="@+id/chose_linear"
@@ -297,17 +276,16 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:gravity="center_horizontal"
-            android:elevation="15dp"
+            android:elevation="50dp"
             android:background="@drawable/small_background2"
+            android:layout_marginBottom="5dp"
             android:orientation="horizontal">
-
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_baseline_arrow_back_24"
                 android:id="@+id/chose_backBtn"
-                app:tint="@color/image_color" />
-
+                app:tint="@color/blue" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -317,7 +295,7 @@
                 android:gravity="center"
                 android:layout_marginStart="50dp"
                 android:fontFamily="@font/josefont"
-                android:textColor="@color/text_color3"
+                android:textColor="@color/purple_700"
                 android:id="@+id/selectedText"/>
 
             <LinearLayout
@@ -332,20 +310,77 @@
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_baseline_delete_24"
                     android:id="@+id/delete_items"
-                    app:tint="@color/blue" />
+                    app:tint="@color/Red_color" />
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/share_icon"
-                    android:layout_marginStart="25dp"
+                    android:layout_marginStart="15dp"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/share_items"
                     app:tint="@color/blue" />
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="5dp"
+                    android:src="@drawable/select_all_icon"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/select_items"
+                    app:tint="@color/purple_500" />
             </LinearLayout>
 
 
         </LinearLayout>
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/permission_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/bottom_navigation"
+        android:padding="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/button_primary_dark"
+        android:orientation="vertical"
+        android:elevation="25dp"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="35dp"
+            android:src="@drawable/storage_permission_icon"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/permission_icon"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please enable Storage\npermission to use this App"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:fontFamily="@font/montserrat"
+            android:layout_marginTop="35dp"
+            android:id="@+id/permission_text"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Give Permission"
+            android:background="@drawable/button_primary_dark"
+            android:textColor="@color/Red_color"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="30dp"
+            android:padding="15dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/josefont"
+            android:id="@+id/permission_button"/>
+    </LinearLayout>
 
     <ProgressBar
         android:layout_width="wrap_content"
@@ -355,9 +390,40 @@
         android:indeterminateTint="@color/Red_color"
         android:visibility="gone"
         android:id="@+id/progressbar"/>
+    <ImageView
+        android:id="@+id/new_file"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="75dp"
+        android:background="@drawable/rounded_background"
+        android:elevation="10dp"
+        android:padding="10dp"
+        android:src="@drawable/ic_baseline_playlist_add_24"
+        app:tint="@color/white" />
 
 
-
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentBottom="true"
+        android:background="@color/primaryDark"
+        android:paddingStart="-20dp"
+        android:paddingEnd="-20dp"
+        app:itemIconTint="@drawable/selector"
+        app:itemPaddingBottom="5dp"
+        app:itemTextColor="@drawable/selector"
+        app:itemIconSize="32dp"
+        app:itemTextAppearanceActive="@style/navDrawerTextStyleActive"
+        app:itemTextAppearanceInactive="@style/navDrawerTextStyleDeActive"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottom_navigation_view"
+        android:visibility="visible"
+        android:id="@+id/bottom_navigation"/>
 
 
 
