--- a/app/src/main/res/layout/activity_merged_pdf_activity.xml
+++ b/app/src/main/res/layout/activity_merged_pdf_activity.xml
@@ -13,88 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:id="@+id/search_layout"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_arrow_back_24"
-                android:id="@+id/back_button"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="15dp"
-                android:visibility="gone"
-                app:tint="@color/image_color" />
-            <LinearLayout
-                android:id="@+id/linear_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/search_background"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/search_logo"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:adjustViewBounds="true"
-                    android:rotation="300"
-                    android:padding="2dp"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="2dp"
-                    android:background="@color/transparent"
-                    android:src="@drawable/search_icon3"
-                    app:tint="@color/Red_color" />
-
-
-                <EditText
-                    android:id="@+id/search_editText"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/search_files"
-                    android:imeOptions="actionSearch"
-                    android:inputType="text"
-                    android:lines="1"
-                    android:paddingStart="5dp"
-                    android:paddingEnd="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    android:textColor="@color/text_color"
-                    android:textColorHint="@color/text_color"
-                    android:textCursorDrawable="@drawable/cursor_colour"
-                    android:cursorVisible="true"
-                    android:textSize="18sp" />
-
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp">
-
-                    <ImageView
-                        android:id="@+id/clear_button"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:adjustViewBounds="true"
-                        android:visibility="gone"
-                        android:src="@drawable/ic_outline_cancel_24"
-                        android:padding="2dp"
-                        app:tint="@color/image_color" />
-
-
-                </RelativeLayout>
-
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
             android:id="@+id/chose_linear"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -135,14 +55,6 @@
                 android:gravity="end"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="27dp"
-                    android:layout_height="27dp"
-                    android:layout_marginEnd="15dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/ic_baseline_delete_24"
-                    android:id="@+id/delete_items"
-                    app:tint="@color/Red_color" />
                 <ImageView
                     android:layout_width="27dp"
                     android:layout_height="27dp"
@@ -195,6 +107,20 @@
             android:layout_marginStart="10dp"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/combine"
+        android:background="@drawable/button_background2"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/white"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/continueButton"/>
 
 
     <ProgressBar
