--- a/app/src/main/res/layout/activity_paging.xml
+++ b/app/src/main/res/layout/activity_paging.xml
@@ -14,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="5dp"
             android:id="@+id/search_layout"
             android:orientation="horizontal">
             <ImageView
@@ -113,38 +113,38 @@
                 android:id="@+id/chose_backBtn"
                 android:layout_gravity="start"
                 android:layout_marginEnd="15dp"
-                app:tint="@color/image_color" />
+                app:tint="@color/blue" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="5"
+                android:layout_weight="4"
                 android:layout_height="wrap_content"
                 android:text="@string/select_items"
                 android:textStyle="bold"
                 android:textSize="16sp"
                 android:textAlignment="center"
                 android:fontFamily="@font/josefont"
-                android:textColor="@color/text_color3"
+                android:textColor="@color/purple_700"
                 android:id="@+id/selectedText"/>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="4"
+                android:layout_weight="5"
                 android:gravity="end"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginEnd="15dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/ic_baseline_delete_24"
                     android:id="@+id/delete_items"
-                    app:tint="@color/blue" />
+                    app:tint="@color/Red_color" />
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginEnd="20dp"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginEnd="15dp"
                     android:src="@drawable/share_icon"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/share_items"
@@ -152,10 +152,10 @@
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:padding="2dp"
+                    android:layout_marginEnd="5dp"
                     android:src="@drawable/select_all_icon"
                     android:id="@+id/select_id"
-                    app:tint="@color/blue" />
+                    app:tint="@color/purple_500" />
             </LinearLayout>
 
 
@@ -165,6 +165,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
         app:layout_constraintTop_toBottomOf="@id/upper_layout">
 
         <androidx.core.widget.NestedScrollView
@@ -180,12 +181,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/recyclerView"
-                    android:layout_marginEnd="15dp"
-                    android:layout_marginStart="15dp"/>
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginStart="10dp"/>
 
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
+
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
