--- a/app/src/main/res/layout/all_list_layout.xml
+++ b/app/src/main/res/layout/all_list_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_margin="5dp"
+    android:id="@+id/model_layout"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -16,7 +17,7 @@
     <ImageView
         android:layout_width="45dp"
         android:layout_height="55dp"
-        android:src="@drawable/new_logo_one"
+        android:src="@drawable/app_logo"
         android:layout_toEndOf="@id/checking"
         android:elevation="10dp"
         android:id="@+id/pdfImage"/>
