--- a/app/src/main/res/layout/choose_imageview.xml
+++ b/app/src/main/res/layout/choose_imageview.xml
@@ -15,7 +15,7 @@
         android:numColumns="auto_fit"
         android:scaleType="fitXY"
         android:padding="2dp"
-        android:src="@drawable/folder_icon"
+        android:src="@drawable/new_folder2"
         android:background="@drawable/button_background3"
         android:id="@+id/imageView"/>
 
