--- a/app/src/main/res/layout/question_dialog.xml
+++ b/app/src/main/res/layout/question_dialog.xml
@@ -58,6 +58,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginStart="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_gravity="center_horizontal"
                 android:textColor="@color/blue"
                 android:textStyle="bold"
                 android:fontFamily="@font/josefont"
