--- a/app/src/main/res/layout/recent_layout.xml
+++ b/app/src/main/res/layout/recent_layout.xml
@@ -12,6 +12,7 @@
         android:layout_height="50dp"
         app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
+        app:cardBackgroundColor="@color/logo_background"
         app:cardElevation="2dp"
         >
         <RelativeLayout
@@ -23,7 +24,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/black_lock"
+                android:src="@drawable/file_lock2"
                 android:visibility="gone"
                 android:id="@+id/image_icon"
                 app:tint="@color/image_color" />
@@ -40,6 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="5dp"
+                android:layout_margin="2dp"
                 android:elevation="-5dp"
                 android:id="@+id/pdfView"/>
         </RelativeLayout>
@@ -62,7 +64,7 @@
             android:textSize="16sp"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textColor="@color/text_color"
+            android:textColor="@color/text_color3"
             android:fontFamily="@font/josefont"
             android:id="@+id/pdfName"/>
 
@@ -73,6 +75,11 @@
             android:layout_marginTop="5dp"
             android:layout_marginStart="2dp"
             >
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_baseline_insert_drive_file_24"
+                android:id="@+id/file_imageView"/>
 
             <TextView
                 android:layout_width="0dp"
@@ -82,7 +89,8 @@
                 android:fontFamily="@font/montserrat"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:textColor="@color/text_color2"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/accent"
                 android:textSize="11sp"
                 android:id="@+id/file_date"/>
 
@@ -92,7 +100,8 @@
                 android:text="@string/_1245kb"
                 android:fontFamily="@font/montserrat"
                 android:textSize="11sp"
-                android:textColor="@color/text_color2"
+                android:textColor="@color/accent"
+                android:layout_gravity="center_vertical"
                 android:textStyle="bold"
                 android:layout_toRightOf="@id/linear"
                 android:layout_marginStart="15dp"
@@ -114,8 +123,8 @@
             android:layout_centerVertical="true"
             android:visibility="visible"
             android:id="@+id/option_icon"
-            android:layout_marginEnd="10dp"
-            app:tint="@color/image_color" />
+            android:layout_marginEnd="5dp"
+            app:tint="@color/accent" />
         <CheckBox
             android:layout_width="25dp"
             android:layout_height="25dp"
@@ -124,15 +133,23 @@
             android:id="@+id/recent_checkbox"
             android:visibility="gone"
             android:layout_marginEnd="10dp"
-            android:drawableTint="@color/blue"
-            android:buttonTint="@color/blue"
+            android:drawableTint="@color/image_color"
+            android:buttonTint="@color/image_color"/>
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/ic_baseline_check_circle_24"
+            android:id="@+id/checking"
+            android:visibility="gone"
+            android:layout_marginEnd="5dp"
+            android:layout_centerVertical="true"
             />
     </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/line_color"
+        android:layout_height="0.4dp"
+        android:background="#BAE8FD"
         android:layout_below="@id/linear"
         android:layout_marginStart="60dp"
         android:layout_marginTop="10dp"
