--- a/app/src/main/res/layout/side_popup_layout.xml
+++ b/app/src/main/res/layout/side_popup_layout.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardBackgroundColor="@color/primary"
-    app:cardElevation="10dp"
+    android:background="@drawable/side_popup_background"
     android:id="@+id/linear">
 
     <LinearLayout
@@ -25,8 +24,8 @@
 
             <ImageView
                 android:id="@+id/flag_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_baseline_edit_24"
                 app:tint="@color/teal_700" />
             <TextView
@@ -92,4 +91,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
