--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,14 +7,14 @@
     <color name="Red_color">#EA0963</color>
     <color name="white">#ffff</color>
 
-    <color name="accent">#0F161A</color>
+    <color name="accent">#71A8F2</color>
     <color name="primaryDark">#080B0D</color>
     <color name="primary">#0D1216</color>
-    <color name="light_blue">#2F4056</color>
+    <color name="logo_background">#305383</color>
     <color name="light_orange">#F4BD6B</color>
 
 
-    <color name="background_color">#182329</color>
+    <color name="background_color">#0D1216</color>
     <color name="text_color">#F1EEEE</color>
     <color name="text_color2">#A6A5A5</color>
     <color name="text_color3">#81C9E1</color>
