--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="white">#ffff</color>
     <color name="new_primaryDark">#142232</color>
     <color name="accent">#71A8F2</color>
-    <color name="light_blue">#2F4056</color>
+    <color name="logo_background">#D8E7FB</color>
+
 
     <color name="primary">#fafafa</color>
     <color name="primaryDark">#f5f5f5</color>
