--- a/app/src/main/res/layout/recent_layout.xml
+++ b/app/src/main/res/layout/recent_layout.xml
@@ -149,7 +149,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.4dp"
-        android:background="#BAE8FD"
+        android:background="@color/accent"
         android:layout_below="@id/linear"
         android:layout_marginStart="60dp"
         android:layout_marginTop="10dp"
