--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -10,7 +10,7 @@
     <color name="accent">#71A8F2</color>
     <color name="primaryDark">#080B0D</color>
     <color name="primary">#0D1216</color>
-    <color name="logo_background">#305383</color>
+    <color name="logo_background">#080B0D</color>
     <color name="light_orange">#F4BD6B</color>
 
 
