--- a/app/src/main/res/layout/activity_camera_photo.xml
+++ b/app/src/main/res/layout/activity_camera_photo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".tools.CombineActivity">
+    tools:context=".tools.CameraFolderActivity">
 
     <RelativeLayout
         android:id="@+id/upper_layout"
@@ -55,6 +55,22 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <ImageView
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_baseline_delete_24"
+                    android:id="@+id/delete_items"
+                    app:tint="@color/Red_color" />
+                <ImageView
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_marginEnd="15dp"
+                    android:src="@drawable/share_icon"
+                    android:layout_gravity="center_vertical"
+                    android:id="@+id/share_items"
+                    app:tint="@color/blue" />
+                <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/select_all_icon"
@@ -67,15 +83,13 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/upper_layout">
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/recyclerView"/>
-    </androidx.core.widget.NestedScrollView>
+        app:layout_constraintTop_toBottomOf="@id/upper_layout"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:id="@+id/recyclerView"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
@@ -101,5 +115,18 @@
         android:indeterminateTint="@color/Red_color"
         android:visibility="gone"
         android:id="@+id/progressbar"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/convert"
+        android:background="@drawable/button_background2"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/white"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/convert_button"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
