--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:background="@color/primary"
     android:id="@+id/main_page"
     tools:context=".view.MainActivity">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -55,6 +54,7 @@
                         android:fontFamily="@font/josefont"
                         android:id="@+id/text_select"
                         android:visibility="gone"/>
+
                     <Switch
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -65,6 +65,15 @@
                         android:layout_centerInParent="true"
                         android:trackTint="@color/blue"
                         tools:ignore="UseSwitchCompatOrMaterialXml" />
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginEnd="15dp"
+                        android:src="@drawable/ic_baseline_photo_camera_24"
+                        android:layout_gravity="end"
+                        android:id="@+id/camera_button"
+                        app:tint="@color/Red_color" />
 
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.AppBarLayout>
