--- a/app/src/main/res/layout/choose_imageview.xml
+++ b/app/src/main/res/layout/choose_imageview.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:layout_marginStart="5dp"
-    android:layout_marginBottom="5dp"
+    android:layout_marginStart="2dp"
+    android:layout_marginBottom="2dp"
     android:elevation="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -18,6 +18,16 @@
         android:src="@drawable/new_folder2"
         android:background="@drawable/button_background3"
         android:id="@+id/imageView"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_baseline_check_circle_24"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        android:id="@+id/image_checkbox"
+        />
 
 
 </RelativeLayout>
