--- a/app/src/main/res/layout/pdf_layout.xml
+++ b/app/src/main/res/layout/pdf_layout.xml
@@ -33,7 +33,6 @@
             android:layout_height="50dp"
             app:cardCornerRadius="5dp"
             android:layout_margin="5dp"
-            app:cardBackgroundColor="@color/logo_background"
             app:cardElevation="2dp"
             >
             <RelativeLayout
@@ -49,13 +48,17 @@
                     android:id="@+id/imageView"
                     android:layout_margin="1dp"
                     />
+
                 <com.github.barteksc.pdfviewer.PDFView
+                    android:id="@+id/pdfView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="5dp"
-                    android:layout_margin="2dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginBottom="2dp"
                     android:elevation="-5dp"
-                    android:id="@+id/pdfView"/>
+                    android:padding="5dp" />
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
         <LinearLayout
@@ -92,7 +95,7 @@
                     android:src="@drawable/ic_baseline_insert_drive_file_24"
                     android:id="@+id/file_imageView"/>
                 <TextView
-                    android:layout_width="70dp"
+                    android:layout_width="90dp"
                     android:layout_height="wrap_content"
                     android:text=""
                     android:fontFamily="@font/montserrat"
